--- a/Swipe/Base.lproj/Main.storyboard
+++ b/Swipe/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GmC-bj-C9b">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--First-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="one" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,71 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.71611048818557965" green="1" blue="0.63052954024597996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="First" id="hhP-mM-DSw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="909" y="75"/>
+        </scene>
+        <!--Second-->
+        <scene sceneID="xqX-7w-VAI">
+            <objects>
+                <viewController storyboardIdentifier="second" id="fdZ-0C-Vgz" customClass="SecondViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pdg-qH-0aE"/>
+                        <viewControllerLayoutGuide type="bottom" id="FzS-Jc-MWa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0aP-f4-5Is">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.74999441484499751" blue="0.22637075771750159" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Second" id="FvC-Jf-Qh1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jez-v8-gdQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="909" y="720"/>
+        </scene>
+        <!--Third-->
+        <scene sceneID="lEs-2m-PeD">
+            <objects>
+                <viewController storyboardIdentifier="third" id="M50-7z-W3l" customClass="ThirdViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ORO-SA-pLO"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q2E-uP-gef"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Fxs-OT-tAy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.39449895246102484" green="0.46235743958758546" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Third" id="a26-dG-QjR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4E5-Bf-6JJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="909" y="1372"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="UNs-lI-NtB">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="GmC-bj-C9b" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="p7M-X0-r16">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="WaF-BW-IiP"/>
+                        <segue destination="fdZ-0C-Vgz" kind="relationship" relationship="viewControllers" id="Ol5-rq-Dqo"/>
+                        <segue destination="M50-7z-W3l" kind="relationship" relationship="viewControllers" id="Pyv-Zp-oUh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sLH-MN-kPi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="237" y="229"/>
         </scene>
     </scenes>
 </document>
